<resources>
    <string name="app_name">MyNotesApp</string>
    <string name="NAMA">Nama</string>
    <string name="Alamat">Alamat</string>
    <string name="NIK">01</string>
    <string name="Tempat_Lahir">Tempat Lahir</string>
    <string name="Tanggal_Lahir">Tanggal Lahir</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
</resources>