<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NoteAddUpdateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_NAMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NAMA"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Alamat"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_NIK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NIK"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_Tempat_Lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Tempat_Lahir"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_Tanggal_Lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Tanggal_Lahir"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>